--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,7 +47,7 @@
    ========================================================================== */
 
    .stat-card-link-wrapper {
-    @apply block bg-white p-5 rounded-lg transition-all duration-300 hover:-translate-y-1;
+    @apply block bg-white p-5 rounded-lg transition-all duration-300 hover:-translate-y-1 mb-10;
 }
 
 .stat-card {
